[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mapper/Mapper.gd" type="Script" id=1]
[ext_resource path="res://Mapper/MapEditor.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Spriter/Tileset/TilesetControl.gd" type="Script" id=5]
[ext_resource path="res://Mapper/MapRenderer.gd" type="Script" id=6]
[ext_resource path="res://Spriter/TilesetSelector.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mapper/NewMapLayerPopup.gd" type="Script" id=8]
[ext_resource path="res://Mapper/NewMapPopup.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
draw_center = false
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.313726, 0.313726, 0.313726, 1 )
anti_aliasing = false

[node name="Mapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
testing = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_right = 320.0
offset_bottom = 240.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MapList" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
offset_right = 320.0
offset_bottom = 19.0

[node name="MapListButtons" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/MapList"]
offset_bottom = 19.0

[node name="AddMapButton" type="Button" parent="VBoxContainer/VBoxContainer/MapList"]
offset_left = 4.0
offset_right = 24.0
offset_bottom = 19.0
custom_minimum_size = Vector2( 20, 0 )
size_flags_horizontal = 2
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
offset_top = 19.0
offset_right = 320.0
offset_bottom = 23.0
theme_override_styles/separator = SubResource( 1 )

[node name="MapEditor" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
offset_top = 23.0
offset_right = 320.0
offset_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1
script = ExtResource( 2 )

[node name="Map" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor"]
offset_right = 239.0
offset_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 0

[node name="MapRenderer" type="Control" parent="VBoxContainer/VBoxContainer/MapEditor/Map"]
offset_right = 239.0
offset_bottom = 144.0
clip_contents = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 6 )

[node name="mouse" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/Map/MapRenderer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -23.0
offset_right = -7.0
offset_bottom = -10.0
text = "0,0"
align = 2

[node name="camera" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/Map/MapRenderer"]
offset_left = 8.0
offset_top = 3.0
offset_right = 96.0
offset_bottom = 16.0
text = "0,0"

[node name="Tilesets" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map"]
offset_top = 144.0
offset_right = 239.0
offset_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TilesetSelector" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets" instance=ExtResource( 7 )]
offset_right = 239.0
offset_bottom = 0.0

[node name="ScrollContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector" index="1"]
offset_right = 239.0
offset_bottom = 0.0

[node name="ButtonList" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector/ScrollContainer" index="0"]
offset_right = 239.0

[node name="AddTilesetButton" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector" index="3"]
visible = false
offset_left = 223.0
offset_right = 239.0

[node name="TilesetScroller" type="ScrollContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets"]
offset_top = 4.0
offset_right = 239.0
offset_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="TilesetControl" type="GridContainer" parent="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetScroller"]
offset_right = 239.0
offset_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0
theme_override_constants/h_separation = 0
script = ExtResource( 5 )

[node name="MapOptions" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor"]
offset_left = 240.0
offset_right = 320.0
offset_bottom = 217.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
offset_right = 80.0
offset_bottom = 13.0
text = "MAP OPTIONS"
align = 1

[node name="LayersHeader" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
offset_top = 17.0
offset_right = 80.0
offset_bottom = 36.0

[node name="LayersTitle" type="Label" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions/LayersHeader"]
offset_top = 3.0
offset_right = 37.0
offset_bottom = 16.0
text = "Layers:"

[node name="AddLayerButton" type="Button" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions/LayersHeader"]
offset_left = 62.0
offset_right = 80.0
offset_bottom = 19.0
custom_minimum_size = Vector2( 17, 17 )
size_flags_horizontal = 10
text = "+"

[node name="LayersList" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MapEditor/MapOptions"]
offset_top = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="NewMapLayerPopup" type="Window" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 24.0
exclusive = true
window_title = "Add Layer"
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="NewMapLayerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NewMapLayerPopup/MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="layer_name" type="HBoxContainer" parent="NewMapLayerPopup/MarginContainer/VBoxContainer"]
offset_right = 120.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/layer_name"]
offset_top = 5.0
offset_right = 28.0
offset_bottom = 18.0
text = "Name:"

[node name="NameField" type="LineEdit" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/layer_name"]
offset_left = 32.0
offset_right = 120.0
offset_bottom = 23.0
size_flags_horizontal = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
placeholder_text = "layer_name"
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="NewMapLayerPopup/MarginContainer/VBoxContainer"]
offset_top = 27.0
offset_right = 120.0
offset_bottom = 44.0
alignment = 1

[node name="AddButton" type="Button" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/Buttons"]
offset_left = 29.0
offset_right = 51.0
offset_bottom = 17.0
text = "Add"

[node name="CancelButton" type="Button" parent="NewMapLayerPopup/MarginContainer/VBoxContainer/Buttons"]
offset_left = 55.0
offset_right = 91.0
offset_bottom = 17.0
text = "Cancel"

[node name="NewMapPopup" type="Window" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -64.0
offset_right = 104.0
offset_bottom = 64.0
exclusive = true
window_title = "New Map"
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="NewMapPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NewMapPopup/MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 204.0
offset_bottom = 124.0
theme_override_constants/separation = 4

[node name="MapName" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
offset_right = 200.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapName"]
offset_top = 5.0
offset_right = 98.0
offset_bottom = 18.0
size_flags_horizontal = 3
text = "Name:"

[node name="mapNameValue" type="LineEdit" parent="NewMapPopup/MarginContainer/VBoxContainer/MapName"]
offset_left = 102.0
offset_right = 200.0
offset_bottom = 23.0
size_flags_horizontal = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
placeholder_text = "map_name"
caret_blink = true

[node name="TileSize" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
offset_top = 27.0
offset_right = 200.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/TileSize"]
offset_top = 2.0
offset_right = 98.0
offset_bottom = 15.0
size_flags_horizontal = 3
text = "Tile Size:"

[node name="tilesizeValue" type="OptionButton" parent="NewMapPopup/MarginContainer/VBoxContainer/TileSize"]
offset_left = 102.0
offset_right = 200.0
offset_bottom = 17.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "32x32 px"
align = 1

[node name="MapSize" type="VBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
offset_top = 48.0
offset_right = 200.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize"]
offset_right = 200.0
offset_bottom = 13.0
size_flags_horizontal = 3
text = "Map Size:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize"]
offset_top = 17.0
offset_right = 200.0
offset_bottom = 40.0
alignment = 1

[node name="mapWidthValue" type="SpinBox" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
offset_left = 7.0
offset_right = 93.0
offset_bottom = 23.0
min_value = 1.0
value = 50.0
rounded = true
allow_greater = true

[node name="Label" type="Label" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
offset_left = 97.0
offset_top = 5.0
offset_right = 103.0
offset_bottom = 18.0
text = "x"

[node name="mapHeightValue" type="SpinBox" parent="NewMapPopup/MarginContainer/VBoxContainer/MapSize/HBoxContainer"]
offset_left = 107.0
offset_right = 193.0
offset_bottom = 23.0
min_value = 1.0
value = 50.0
rounded = true

[node name="Buttons" type="HBoxContainer" parent="NewMapPopup/MarginContainer/VBoxContainer"]
offset_top = 92.0
offset_right = 200.0
offset_bottom = 109.0
alignment = 1

[node name="AddButton" type="Button" parent="NewMapPopup/MarginContainer/VBoxContainer/Buttons"]
offset_left = 69.0
offset_right = 91.0
offset_bottom = 17.0
text = "Add"

[node name="CancelButton" type="Button" parent="NewMapPopup/MarginContainer/VBoxContainer/Buttons"]
offset_left = 95.0
offset_right = 131.0
offset_bottom = 17.0
text = "Cancel"

[editable path="VBoxContainer/VBoxContainer/MapEditor/Map/Tilesets/TilesetSelector"]
